k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-doc-chatbot
  labels:
    app.kubernetes.io/part-of: smart-doc-chatbot
    app.kubernetes.io/managed-by: argocd
